2008-07-25  Andreas Kupries  <andreask@activestate.com>

	* tests/info.test: Tests 38.* added, exactly testing the tracking
	of location for uplevel scripts. Resolved merge conflict on
	info-37.0, switched !singleTestInterp constraint to glob matching
	instead. Ditto info-22.8, removed constraint, more glob matching,
	and reduced the depth of the stack we check. More is coming, right
	now I want to commit the bug fixes.

	* tests/oo.test: Updated oo-22.1 for expanded location tracking.

	* generic/tclCompile.c (TclInitCompileEnv): Reorganized the
	initialization of the #280 location information to match the flow
	in TclEvalObjEx to get more absolute contexts.

	* generic/tclBasic.c (TclEvalObjEx): Added missing cleanup of
	extended location information.

2008-07-25  Daniel Steffen  <das@users.sourceforge.net>

	* tests/info.test (info-37.0): Add !singleTestInterp constraint;
	(info-22.8, info-23.0): switch to glob matching to avoid sensitivity
	to tcltest.tcl line number changes, remove knownBug constraint, fix
	expected result. [Bug 1605269]

2007-07-24  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/Notifier.3       CONSTified 4 functions in the
	* doc/Thread.3         Notifier which all have a
	* generic/tcl.decls    Tcl_Time * in it which is supposed
	* generic/tcl.h        to be a constant, but this was not
	* generic/tclDecls.h   reflected in the API:
	* generic/tclNotify.c       Tcl_SetTimer
	* generic/tclThread.c       Tcl_WaitForEvent
	* macosx/tclMacOSXNotify.c  Tcl_ConditionWait
	* unix/tclUnixNotfy.c       Tcl_SetMaxBlockTime
	* unix/tclUnixThrd.c   Introduced a CONST86, so extensions which
	* win/tclWinNotify.c   have their own Notifier (are there any?)
	* win/tclWinThrd.c     can be modified to compile against both
	                       Tcl 8.5 and Tcl 8.6
	tclDecls.h is re-generated with "make genstubs"
	This change complies with TIP #24
	***POTENTIAL INCOMPATIBILITY***

2008-07-23  Alexandre Ferrieux  <ferrieux@users.sourceforge.net>
